# healthy-bot

./: .coverage  .gitignore  Makefile  main.py  pyproject.toml  ruff.toml
fitness-bot/: bot.py  states.py
fitness-bot/database/: core.py  crud.py
fitness-bot/handlers/: admin_handlers.py  analitics_handlers.py  user_handlers.py  workout_handlers.py
fitness-bot/keyboards/: __init__.py  keyboards.py
fitness-bot/middlewares/: admin_logger.py
fitness_bot/: states.py
fitness_bot/database/: crud.py
fitness_bot/filters/: admin_filter.py
fitness_bot/handlers/: analitics_handlers.py  user_handlers.py  workout_handlers.py
fitness_bot/keyboards/: keyboards.py
fitness_bot/middlewares/: admin_logger.py
tests/: conftest.py  test_workout_handlers.py
